nav menu not opening on mobile fix2

--- a/css/bootstrap-Jasny.css
+++ b/css/bootstrap-Jasny.css
@@ -5021,7 +5021,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navmenu {
-  width: 200px;
+  width: 250px;
   height: 100%;
   border-radius: 4px;
 }
